Add CreatePipeline and SetCurrentDeployment to the API
