# api/server/go/go/model_deployment.go
@@ -17,8 +17,4 @@ type Deployment struct {
 	Number int64 `json:"number"`
 
 	Created time.Time `json:"created,omitempty"`
-
-	Started time.Time `json:"started,omitempty"`
-
-	Finished time.Time `json:"finished,omitempty"`
 }
