# api/server/go/go/model_set_current_deployment.go
@@ -9,6 +9,6 @@
 
 package openapi
 
-type InlineObject struct {
-	PipelineID string `json:"pipelineID,omitempty"`
+type SetCurrentDeployment struct {
+	PipelineID string `json:"pipelineID"`
 }
